# kanshisha

./: .gitignore  README.md  docker-compose.yaml
.github/workflows/: python-sdk-publish.yml
api/: package.json
api/src/: app.module.ts  main.ts
api/src/common/utils/: libs.ts
api/src/config/: database.config.ts
api/src/database/: cassandra.service.ts
api/src/modules/traces/: traces.controller.ts  traces.module.ts  traces.service.ts
api/src/modules/users/: users.controller.ts
docs/: tools.txt
sdks/python/: Makefile  pyproject.toml
sdks/python/examples/: traces.py
sdks/python/src/moraqib/: __init__.py  _client.py
sdks/python/src/moraqib/resources/: __init__.py  _resource.py  traces.py
sdks/python/src/moraqib/types/: __init__.py  common.py  trace.py
web/: README.md  package-lock.json  package.json
web/prisma/: schema.prisma
web/src/app/: globals.css  layout.tsx
web/src/app/annotations/: page.tsx
web/src/app/datasets/: page.tsx
web/src/app/events/: page.tsx
web/src/app/invite-members/: page.tsx
web/src/app/prompt-engineering/: page.tsx
web/src/app/tracing/: page.tsx
web/src/app/triggers/: page.tsx
web/src/components/: logo.tsx  user-nav.tsx
web/src/components/code/: code-viewer.tsx  code-viewer2.tsx  copy-to-clipboard.tsx
web/src/components/home/: app-sidebar.tsx  data-card.tsx  nav-menus.tsx  recent-models-table.tsx
web/src/components/modals/: code-modal.tsx  confirm-modal.tsx
web/src/components/ui/: sidebar.tsx
web/src/constants/: demo.ts  nav.ts
web/src/server/: index.ts
(+12 files in other folders)
